; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_popator.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_popator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@atorp = common dso_local global i32* null, align 8
@atorstack = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [25 x i8] c"operator stack underflow\00", align 1
@subidp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @popator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @popator() #0 {
  %1 = load i32*, i32** @atorp, align 8
  %2 = load i32*, i32** @atorstack, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  %4 = icmp ule i32* %1, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @cant(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i32, i32* @subidp, align 4
  %9 = add nsw i32 %8, -1
  store i32 %9, i32* @subidp, align 4
  %10 = load i32*, i32** @atorp, align 8
  %11 = getelementptr inbounds i32, i32* %10, i32 -1
  store i32* %11, i32** @atorp, align 8
  %12 = load i32, i32* %11, align 4
  ret i32 %12
}

declare dso_local i32 @cant(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
